* Replace SOAPpy by suds
* Add GB validation for {GB,HA}888 8xxx yy format
* Add GB validation for branch traders 12 digits
* Update vies SOAP URL and add unittest
* Add Check Russia VAT number

Version 0.5 - 2009-11-13
* Add Check Chile RUT number for issue5
* Add Check Colombian RUT number for issue4
* Fix Portugal VAT when check number is 11

Version 0.4 - 2009-03-30
* Update Spain test for issue3 thanks to carlos@pemas.es
* Add VIES check with the SOAP Service of EU
* Add test for Bulgaria VAT number with length of 9

Version 0.3 - 2009-03-23
* Fix check_vat_ro for vat number with less than 10 digits

Version 0.2 - 2008-09-29
* Add check_vat_uk function
* Improve Belgium vat check as first number must be 0
* Add Check Albania VAT number
* Add Check San Marino VAT number
* Add Check Ukraine VAT number

Version 0.1 - 2008-09-20
* Initial release