@@ -1,3 +1,4 @@
+* Add generic check_vat method
 * Replace SOAPpy by suds
 * Add GB validation for {GB,HA}888 8xxx yy format
 * Add GB validation for branch traders 12 digits
